added tfidf to NB

--- a/naive-bayes-bow.ipynb
+++ b/naive-bayes-bow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -76,18 +76,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,6 +101,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vectorize_data(ngram_range=(1, 1), variation=\"count\"):\n",
+    "    if variation == \"tfidf\":\n",
+    "        vectorizer = TfidfVectorizer()\n",
+    "        X = vectorizer.fit_transform(text)\n",
+    "    if variation == \"count\":\n",
+    "        vectorizer = CountVectorizer(ngram_range=ngram_range)\n",
+    "        X = vectorizer.fit_transform(text)\n",
+    "    return X, vectorizer"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -108,16 +125,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def vectorize_data(ngram_range=(1, 1)):\n",
-    "    vectorizer = CountVectorizer(ngram_range=ngram_range)\n",
-    "    X = vectorizer.fit_transform(text)\n",
-    "    return X, vectorizer\n",
-    "\n",
-    "vec_X, vectorizer = vectorize_data((1, 1))\n",
+    "vec_X, vectorizer = vectorize_data((1, 1), \"count\")\n",
     "# print(vectorizer.get_feature_names_out(vec_X))\n",
     "# print(vectorizer.vocabulary_)\n",
     "# print(vec_X.shape)\n",
@@ -126,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -175,6 +187,88 @@
       "Overall accuracy of model: 0.7195022439820481\n",
       "Accuracy on classifying spam: 0.7111111111111111\n",
       "Accuracy on identifying ham from spam: 0.7215061915592621\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "\n",
+    "nb_model = GaussianNB()\n",
+    "nb_model.fit(X_train.toarray(), Y_train)\n",
+    "evaluate_model(nb_model, X_test.toarray(), Y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TF-IDF (Term Frequency Inverse Document Frequency)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vec_X, vectorizer = vectorize_data((1, 1), \"tfidf\")\n",
+    "# print(vectorizer.get_feature_names_out(vec_X))\n",
+    "# print(vectorizer.vocabulary_)\n",
+    "# print(vec_X.shape)\n",
+    "# print(vec_X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, Y_train, Y_test = train_test_split(vec_X, text_class, test_size=0.25, random_state=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Applying Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overall accuracy of model: 0.9320685434516524\n",
+      "Accuracy on classifying spam: 0.6613756613756614\n",
+      "Accuracy on identifying ham from spam: 0.9967146828405358\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "lr_model = LogisticRegression(random_state=0, max_iter=1000)\n",
+    "lr_model.fit(X_train, Y_train)\n",
+    "evaluate_model(lr_model, X_test, Y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overall accuracy of model: 0.7368421052631579\n",
+      "Accuracy on classifying spam: 0.7132275132275132\n",
+      "Accuracy on identifying ham from spam: 0.7424816780389184\n"
      ]
     }
    ],
