Add a bit of documentation

--- a/naive-bayes-bow.ipynb
+++ b/naive-bayes-bow.ipynb
@@ -176,6 +176,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Applying Naive Bayes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -255,6 +262,13 @@
     "lr_model = LogisticRegression(random_state=0, max_iter=1000)\n",
     "lr_model.fit(X_train, Y_train)\n",
     "evaluate_model(lr_model, X_test, Y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Applying Naive Bayes"
    ]
   },
   {
