--- a/data_encoding.ipynb
+++ b/data_encoding.ipynb
@@ -184,7 +184,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -198,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
